--- a/scss/_notification.scss
+++ b/scss/_notification.scss
@@ -3,13 +3,15 @@
 .notifications {
     position: fixed;
     top: 0;
-    right: $spacing;
+    left: 0;
+    width: 100vw;
     pointer-events: none;
     box-sizing: border-box;
 
 
     .notification {
         position: static;
+        margin-left: auto;
     }
 }
 
@@ -19,7 +21,7 @@
     position: fixed;
     top: 0;
     right: $spacing;
-    margin: $spacing 0;
+    margin: $spacing;
 
     display: flex;
 
@@ -30,7 +32,9 @@
     
     color: white;
     background-color: $midnight-blue;
-    border-radius: $radius;
+    border-bottom-left-radius: $radius;
+    border-top-left-radius: $radius;
+
 
     transition: all 0.5s;
 
@@ -40,7 +44,9 @@
 
     &.removing {
         max-height: 0;
-        margin: 0;
+        margin-top: 0;
+        margin-bottom: 0;
+
     }
 
     .message {
